<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/goodsAttr"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    android:visibility="gone">

    <LinearLayout
        android:visibility="gone"
        style="@style/goodsDetailLinearLayout"
        android:layout_marginTop="@dimen/dip_1">

        <TextView
            style="@style/goodsDetailTitle"
            android:text="@string/category" />

        <TextView
            android:id="@+id/txtCategory"
            style="@style/goodsDetailContent"
            android:text="全脂牛奶" />

    </LinearLayout>

    <LinearLayout
        style="@style/goodsDetailLinearLayout"
        android:layout_marginTop="@dimen/dip_1">

        <TextView
            style="@style/goodsDetailTitle"
            android:text="@string/producingArea" />

        <TextView
            android:id="@+id/tv_goods_detail_yieldly"
            style="@style/goodsDetailContent"
            />

    </LinearLayout>

    <LinearLayout
        style="@style/goodsDetailLinearLayout"
        android:layout_marginTop="@dimen/dip_1">

        <TextView
            style="@style/goodsDetailTitle"
            android:text="@string/characteristic" />

        <TextView
            android:id="@+id/tv_goods_detail_features"
            style="@style/goodsDetailContent"
            />

    </LinearLayout>

    <LinearLayout
        style="@style/goodsDetailLinearLayout"
        android:layout_marginTop="@dimen/dip_1">

        <TextView
            style="@style/goodsDetailTitle"
            android:text="@string/ingredient" />

        <TextView
            android:id="@+id/tv_goods_detail_ingredients"
            style="@style/goodsDetailContent"
            />

    </LinearLayout>

    <LinearLayout
        style="@style/goodsDetailLinearLayout"
        android:layout_marginTop="@dimen/dip_1">

        <TextView
            style="@style/goodsDetailTitle"
            android:text="@string/net_content" />

        <TextView
            android:id="@+id/tv_goods_detail_net_content"
            style="@style/goodsDetailContent"
            />

    </LinearLayout>

    <LinearLayout
        style="@style/goodsDetailLinearLayout"
        android:layout_marginTop="@dimen/dip_1">

        <TextView
            style="@style/goodsDetailTitle"
            android:text="@string/quality_guarantee_period" />

        <TextView
            android:id="@+id/tv_goods_detail_shelf_life"
            style="@style/goodsDetailContent"
            />

    </LinearLayout>

</LinearLayout>
