<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/dip_48"-->
        <!--android:background="@color/colorPrimary"-->
        <!--android:paddingLeft="@dimen/dip_10"-->
        <!--android:paddingRight="@dimen/dip_10">-->

        <!--<TextView-->
            <!--android:id="@+id/txtCity"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--android:drawablePadding="@dimen/dip_7"-->
            <!--android:drawableRight="@mipmap/img_down"-->
            <!--android:gravity="center_vertical"-->
            <!--android:text="上海"-->
            <!--android:textColor="@color/white"-->
            <!--android:textSize="@dimen/text_size_15" />-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/app_name"-->
            <!--android:textColor="@color/white"-->
            <!--android:textSize="@dimen/text_size_18"-->
            <!--android:textStyle="bold" />-->

        <!--<ImageView-->
            <!--android:id="@+id/imgSearch"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:gravity="center_vertical"-->
            <!--android:paddingLeft="@dimen/dip_10"-->
            <!--android:paddingRight="@dimen/dip_10"-->
            <!--android:src="@mipmap/img_search" />-->

    <!--</RelativeLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_110"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtRoomMilk"
            style="@style/sortTextViewStyle"
            android:drawableTop="@mipmap/img_room_temp_milk"
            android:text="@string/roomTempMilk" />

        <TextView
            android:id="@+id/txtLowMilk"
            style="@style/sortTextViewStyle"
            android:drawableTop="@mipmap/img_low_temp_milk"
            android:text="@string/lowTempMilk" />

        <TextView
            android:id="@+id/txtChildMilk"
            style="@style/sortTextViewStyle"
            android:drawableTop="@mipmap/img_child_milk"
            android:text="@string/childMilk" />

        <TextView
            android:id="@+id/txtOldMilk"
            style="@style/sortTextViewStyle"
            android:drawableTop="@mipmap/img_old_milk"
            android:text="@string/oldMilk" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_110"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtAdultMilk"
            style="@style/sortTextViewStyle"
            android:drawableTop="@mipmap/img_adult_milk"
            android:text="@string/adultMilk" />

        <TextView
            android:id="@+id/txtMineralWater"
            style="@style/sortTextViewStyle"
            android:drawableTop="@mipmap/img_mineral_water"
            android:text="@string/mineralWater" />

        <TextView
            android:id="@+id/txtNewProduct"
            style="@style/sortTextViewStyle"
            android:drawableTop="@mipmap/img_new_product"
            android:text="@string/newProduct" />

        <TextView
            android:id="@+id/txtActivity"
            style="@style/sortTextViewStyle"
            android:drawableTop="@mipmap/img_home_activity"
            android:text="@string/homeActivity" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lineInformation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_45"
        android:layout_marginTop="@dimen/dip_10"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dip_10"
        android:paddingRight="@dimen/dip_10">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dip_10"
            android:src="@mipmap/img_home_milk" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dip_25"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dip_10"
            android:background="@drawable/btn_login_pressed"
            android:gravity="center"
            android:paddingLeft="@dimen/dip_7"
            android:paddingRight="@dimen/dip_7"
            android:text="@string/expressNews"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dip_7"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text=": 每天早晨这个点喝牛奶, 可以达到..."
            android:textColor="@color/titleColor"
            android:textSize="@dimen/text_size_15" />

    </LinearLayout>

    <!--<com.yundong.milk.view.recyclerview.XRecyclerView-->
        <!--android:id="@+id/recyclerView"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="@dimen/dip_10"-->
        <!--android:background="@color/white" />-->

</LinearLayout>
